--- a/feriavirtual/src/main/resources/application.yml
+++ b/feriavirtual/src/main/resources/application.yml
@@ -3,6 +3,8 @@
 env: "DEV"
 project: "@project.artifactId@"
 api: "api-luciano"
+server:
+  port : 8081
 logging:
   level:
     org.springframework: ERROR
@@ -12,9 +14,9 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS_LIST =(ADDRESS = (PROTOCOL = TCP)(Host = localhost)(Port = 1521)))(CONNECT_DATA =(SERVICE_NAME = ORCLCDB.localdomain)(SERVER=dedicated)))
-    username: duoc 
-    password: duoc
+    url: jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS_LIST =(ADDRESS = (PROTOCOL = TCP)(Host = localhost)(Port = 1521)))(CONNECT_DATA =(SID = xe)(SERVER=dedicated)))
+    username: fvirtual 
+    password: fvirtual
     driver-class-name: oracle.jdbc.OracleDriver
   jpa:
     hibernate:
